# SplendorSimulator

./: .gitignore  LICENSE  README.md  clean_windows.sh  dev_rust.sh  main.py  requirements.txt  rust_dev.sh  rust_test.sh  setup_conda_env.sh  setup_pyenv_windows.sh  setup_rust.sh  test_model.py  test_nothing.py  test_rust.sh  trainer.py
Docs/: .gitignore  Outline.md
game_data/: .~lock.cards.csv#  cards.csv  game_config_data.py  piece_counts.csv
game_model/: ChatGPT_trainer.py  action.py  actor.py  card.py  game.py  game_runner.py  new_trainer.py  noble.py  replay_memory.py  resource_types.py  rust_adapter.py  trainer(Alexa).py  trainer.py  trainer_Alexa.py  trainer_skeleton.py  turn.py  turn_actions.py
game_server_interface/: game_server.py
input_parser/: action_parser.py
python_rust_bind_adapter/: main.py
rust_module/: Cargo.toml
rust_module/bindings/: Cargo.toml  pyproject.toml
rust_module/bindings/src/: actor.rs  config.rs  game.rs  lib.rs  main.rs  turn.rs
rust_module/bindings/src/components/: card.rs  mod.rs  noble.rs  resource_bank.rs  resource_cost.rs  resource_type.rs
rust_module/bindings/src/vectorization/: game_vect.rs  mod.rs  option_vect.rs  slice_vect.rs  to_vect.rs
rust_splendor/: Cargo.toml
splendor-web-viewer/: package-lock.json  package.json
tests/: test_action_mappers.py  test_action_validator.py  test_game_loop_performance.py  test_game_sequences.py  test_game_state_mappers.py  test_helpers.py  test_index_mapper.py  test_mappers.py  test_model.py  test_param_dict.py
utilities/: better_param_dict.py  print_utils.py  utils.py  (+2 more)
(+113 files in other folders)
